--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Snake-Water-Gun-Game</h1>
+    <h1>Snake Water Gun Game</h1>
     <p>Choose your move:</p>
     <div class="choices">
       <button onclick="playGame('snake')">🐍 Snake</button>
